@@ -71,6 +71,8 @@ RELEASE 0.05 -
   - Fix the -c option so it doesn't stop removing targets if one doesn't
     already exist.
 
+  - Fix the --debug=pdb option when run on Windows NT.
+
   From Steve Leblanc:
 
   - Add support for the -u option.
